--- a/yes_page.html
+++ b/yes_page.html
@@ -15,6 +15,7 @@
 </head>
 <body>
     <div class="container">
+         <video class="gif-result" src="Love me.mp4" autoplay loop></video>
         <h1 class="header_text">I always knew you’d choose yes.</h1>
 
         <div class="gif_container">
