--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="container">
-        <video class="local-gif" src="Reply me love.mp4" autoplay muted loop></video>
+        <video class="local-gif" src="love.mp4" autoplay muted loop></video>
         <h1>Will you be my Valentine?</h1>
 
         <div class="buttons">
