--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <div class="gif_container">
             <img 
-                src="assets/main.gif"
+                src="main.gif"
                 alt="Cute GIF"
                 class="no-click"
             >
