--- a/yes_page.html
+++ b/yes_page.html
@@ -20,7 +20,7 @@
 
         <div class="gif_container">
             <img 
-                src="assets/yes.gif"
+                src="yes.gif"
                 alt="Happy Yes GIF"
                 class="no-click"
             >
