--- a/yes_page.html
+++ b/yes_page.html
@@ -16,7 +16,7 @@
 <body>
     <div class="container">
          <video class="gif-result" src="Love me.mp4" autoplay loop></video>
-        <h1 class="header_text">I always knew <strong>Sandy</strong>❤️ you’d choose yes .</h1>
+        <h1 class="header_text">I always knew <div colour="pink">Sandy</div>div>❤️ you’d choose yes .</h1>
 
         <div class="gif_container">
             <img 
